--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "browserify": "^16.2.3",
     "d3": "^5.9.2",
     "lodash": "^4.17.11",
-    "sortablejs": "^1.9.0"
+    "sortablejs": "^1.10.0-rc2"
   },
   "devDependencies": {},
   "scripts": {
